--- a/public/style/main.css
+++ b/public/style/main.css
@@ -5,9 +5,17 @@ body{
     position: relative;
     font-size: 16px;
     font-family: 'Open Sans', sans-serif;
+    overflow: hidden;
 }
 
-/*OVERRRIDE BOOTSTRAP*/
+          .loader {
+            background: url('img/loader.gif') no-repeat;
+            width: 400px;
+            height: 400px;
+            position: absolute;
+            display: none;
+          }
+
 #query{
     width: auto;
     display: block;
