--- a/public/style/main.css
+++ b/public/style/main.css
@@ -26,16 +26,21 @@ body{
 #logo{
     position: absolute;
     top: 55px;
-    left: 50%;
-    margin-left: -500px;
+    left: 60px;
+}
+
+#query-container{
+    position: relative;
+    margin-top: 50px;
+    margin-right: 60px;
+    margin-left: 340px;
 }
 
 #query{
-    width: auto;
+    width: 100%;
     display: block;
-    margin: 50px auto 0 auto;
     min-width: 400px;
-    max-width: 400px;
+    /*max-width: 400px;*/
     background-color: #e6e6e6;
     border-radius: 4px;
     padding: 10px;
@@ -56,7 +61,7 @@ body{
 
 .results-container{
     position: relative;
-    padding: 15px 25px;
+    padding: 15px 60px;
 }
 
 #results-dark{
@@ -69,14 +74,14 @@ body{
     right: 0;
     bottom: 0;
     background-color: #ffffff;
-    padding: 5px 25px 15px 25px;
+    padding: 5px 60px 15px 60px;
 }
 
 .result-detail-content .result-content{
     background-color: #ffffff;
     padding-bottom: 30px;
-padding: 0 15px;
-margin: 0 -15px;
+padding: 0 60px;
+margin: 0 -60px;
 }
 
 a.result{
